--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -3,25 +3,35 @@
     .heading {
         display: flex;
         flex-direction: column;
+        align-items: center;
+
     }
 
     .nav-links {
         display: flex;
         flex-direction: column;
+        /*width: 80%;*/
+
     }
     body {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
     .header-img {
         display: flex;
         flex-direction: column;
+        height:80%;
+        width:90%;
     }
     li {
         list-style-type: none;
-        padding: 0;
+        padding: 1em 1em;
         display: flex;
+        flex-grow: 1;
         align-items: center;
         margin: .75em 0;
+        background-color:lightgrey;
     }
+
 }
