--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -26,12 +26,16 @@
     }
     li {
         list-style-type: none;
-        padding: 1em 1em;
+
         display: flex;
         flex-grow: 1;
+        border-width: 10em;
         align-items: center;
         margin: .75em 0;
         background-color:lightgrey;
+        padding-left: 11em;
+        padding-right:13em;
+
     }
 
 }
