--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -24,6 +24,7 @@
         height:80%;
         width:90%;
     }
+
     li {
         list-style-type: none;
 
@@ -33,11 +34,13 @@
         align-items: center;
         margin: .75em 0;
         background-color:lightgrey;
-        padding-left: 11em;
-        padding-right:13em;
-
+        padding-left: 7em;
+        padding-right: 7em;
     }
-
+    .nav {
+        display: flex;
+        align-items: center;
+    }
 }
 
 /*git pull is easy!*/
