--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -5,6 +5,7 @@
         flex-direction: column;
         align-items: center;
 
+
     }
 
     .nav-links {
@@ -43,8 +44,15 @@
     ul{
         padding: 0;
     }
+    .alert-info {
+        background-color: lightblue;
+        padding: 12px 90px;
+        border: solid;
+        border-color: lightgray;
+
+    }
     .alert-info a {
-        text-decoration: none;
+        text-decoration:none ;
     }
 }
 
