--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,59 +1,61 @@
-
-@media screen and (max-width:365px) {
-    .heading {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-
-    }
-
-    .nav-links {
-        display: flex;
-        flex-direction: column;
-        /*width: 80%;*/
-
-    }
-    body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .header-img {
-        display: flex;
-        flex-direction: column;
-        height:80%;
-        width:90%;
-    }
-
-    li {
-        list-style-type: none;
-
-        display: flex;
-        flex-grow: 1;
-        border-width: 10em;
-        align-items: center;
-        margin: .75em 0;
-        background-color:lightgrey;
-        padding: .75em 7em;
-    }
-    .nav {
-        display: flex;
-        align-items: center;
-    }
-    ul{
-        padding: 0;
-    }
-    .alert-info {
-        background-color: lightblue;
-        padding: 12px 90px;
-        border: solid;
-        border-color: lightgray;
-
-    }
-    .alert-info a {
-        text-decoration:none ;
-    }
+.heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.nav-links {
+    display: flex;
+    flex-direction: column;
+    /*width: 80%;*/
+}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.header-img {
+    display: flex;
+    flex-direction: column;
+    height:80%;
+    width:90%;
+}
+li {
+    list-style-type: none;
+    display: flex;
+    flex-grow: 1;
+    border-width: 10em;
+    align-items: center;
+    margin: .75em 0;
+    background-color:lightgrey;
+    padding: .75em 7em;
+}
+.nav {
+    display: flex;
+    align-items: center;
+}
+ul{
+    padding: 0;
+}
+.alert-info a {
+    text-decoration: none;
 }
 
+@media screen and (min-width:700px) {
+    .alert-info {
+        display: none;
+    }
+    .header{
+        display: flex;
+        flex-direction: row;
+    }
+    .nav-links {
+        display: flex;
+        flex-direction: row;
+    }
+    li {
+        padding: 0;
+        margin: 1em;
+        background: none;
+    }
+}
 /*git pull is easy!*/
